WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120096
REGRESSION (
r145458
?): WebProcess doesn't respect UI process localization
https://bugs.webkit.org/show_bug.cgi?id=120096
Summary
REGRESSION (r145458?): WebProcess doesn't respect UI process localization
Alexey Proskuryakov
Reported
2013-08-20 16:00:08 PDT
Running UI process with -AppleLanguages argument no longer results in a matching localization in WebProcess. Also, WebKitTestRunner fails to set WebProcess localization to English. <
rdar://problem/14787771
>
Attachments
proposed fix
(5.22 KB, patch)
2013-08-20 16:12 PDT
,
Alexey Proskuryakov
darin
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2
(486.30 KB, application/zip)
2013-08-21 05:11 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-08-20 16:12:54 PDT
Created
attachment 209236
[details]
proposed fix
Build Bot
Comment 2
2013-08-21 05:11:26 PDT
Comment on
attachment 209236
[details]
proposed fix
Attachment 209236
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/1513866
New failing tests: fast/workers/termination-with-port-messages.html
Build Bot
Comment 3
2013-08-21 05:11:28 PDT
Created
attachment 209263
[details]
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
Darin Adler
Comment 4
2013-08-21 09:52:29 PDT
Comment on
attachment 209236
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=209236&action=review
> Source/WebKit2/UIProcess/Launcher/mac/ProcessLauncherMac.mm:425 > + RetainPtr<CFStringRef> cfLocalization = adoptCF(WKCopyCFLocalizationPreferredName(0)); > + CString localization = String(cfLocalization.get()).utf8(); > + CString appleLanguagesArgument = String::format("('%s')", localization.data()).utf8();
I don’t think we need all three local variables. Maybe get rid of cfLocalization? Why use String::format when concatenation has much better performance? I would write this single-line version: CString appleLangagesArgument = ("('" + String(adoptCF(WKCopyCFLocalizationPreferredName(0))) + "')").utf8();
Alexey Proskuryakov
Comment 5
2013-08-21 10:24:47 PDT
Committed <
http://trac.webkit.org/r154396
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug